# babble-native

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: app-sidebar.tsx  message.tsx  mode-toggle.tsx  sidebar-modal-content.tsx  theme-provider.tsx
src/components/ui/: button.tsx  dialog.tsx  drawer.tsx  input.tsx  sidebar.tsx
src/context/: ConversationContext.tsx  ModalContext.tsx  ModelContext.tsx
src/utils/: crypto.ts
